--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "react-apexcharts": "^1.4.1",
     "react-dom": "^18",
     "react-dropzone": "^14.2.3",
+    "react-hover-video-player": "^10.0.1",
     "react-slick": "^0.30.2",
     "rtl-detect": "^1.1.2",
     "stylis": "^4.3.1",
