--- a/package.json
+++ b/package.json
@@ -9,11 +9,13 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@algolia/autocomplete-js": "^1.17.0",
     "@emotion/react": "^11.11.3",
     "@emotion/styled": "^11.11.0",
     "@mui/joy": "^5.0.0-beta.28",
     "@mui/material": "^5.15.7",
     "@types/react-slick": "^0.23.13",
+    "algoliasearch": "^4.23.3",
     "apexcharts": "^3.47.0",
     "framer-motion": "^11.0.3",
     "mui-one-time-password-input": "^2.0.2",
@@ -24,6 +26,8 @@
     "react-dom": "^18",
     "react-dropzone": "^14.2.3",
     "react-hover-video-player": "^10.0.1",
+    "react-instantsearch": "^7.7.1",
+    "react-instantsearch-dom": "^6.40.4",
     "react-slick": "^0.30.2",
     "rtl-detect": "^1.1.2",
     "stylis": "^4.3.1",
